--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html> 
+<head> 
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
+  <title>Code Schools</title> 
+  <script src="http://maps.google.com/maps/api/js?sensor=false" 
+          type="text/javascript"></script>
+</head> 
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<div id="panel">
+      <input id="address" type="textbox" value="" placeholder="enter your location">
+      <input type="button" value="Search" onclick="codeAddress()">
+    </div>
+  <div id="map" style="width: 500px; height: 400px;"></div>
+
+  <script src="js/main.js"></script>
+    
 </body>
 </html>
