--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <div id="map" style="width: 500px; height: 400px;"></div>
 
   <script src="js/main.js"></script>
-    
+    <a href="src/passdata.html">another project</a>
 </body>
 </html>
