--- a/src/passdata.html
+++ b/src/passdata.html
@@ -15,7 +15,7 @@
   </div>
   
   
-<script src="http://ajaz.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"
 charset="urf-8"></script>
 <script type="text/javascript" src="cross-domain-requests.js"></script>
 
