--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <input type="button" value="Search" onclick="codeAddress()">
     </div>
   <div id="map" style="width: 500px; height: 400px;"></div>
-  <script src="locations.js"></script>
+  <script src="js/locations.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
